--- a/package.json
+++ b/package.json
@@ -4,8 +4,38 @@
   "version": "1.0.0",
   "license": "MIT",
   "main": "src/index.ts",
+  "scripts": {
+    "dev": "react-native start --reset-cache",
+    "build": "tsc --build tsconfig.json",
+    "build:watch": "tsc --build tsconfig.json --watch"
+  },
   "dependencies": {
-    "react": "18.3.1",
+    "@react-navigation/native": "6.1.8",
+    "@react-navigation/native-stack": "6.9.26",
+    "dev-tools": "git+ssh://git@github.com:yoodomy/testDevTools.git",
+    "i18next": "^23.6.0",
+    "i18next-http-backend": "^2.3.1",
+    "lodash": "^4.17.21",
+    "lottie-react-native": "^6.3.1",
+    "native-base": "^3.4.28",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-i18next": "^13.3.1",
+    "react-native": "0.72.7",
+    "react-native-config": "^1.5.1",
+    "react-native-mmkv": "^2.10.2",
+    "react-native-safe-area-context": "4.7.2",
     "react-native-svg": "^13.9.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.0"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "resolutions": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
