--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@celcomdigi/sdk",
-  "private": true,
+  "name": "@celcomdigi/test-sdk",
+  "private": false,
   "version": "1.0.2",
   "license": "MIT",
   "main": "src/index.ts",
@@ -37,5 +37,9 @@
   "resolutions": {
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yoodomy/testSDK.git"
   }
 }
